--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
 body {
     background-color: lightpink;
-}
+
+   font-family: "Bricolage", cursive;
+  font-weight: 400;
+  font-style: normal;
+}}
