--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,84 @@
+@media (max-width: 320px) {
+        .challenge-row {
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 0.5em;
+        }
+        .challenge-row span {
+            flex: 0 0 auto;
+            text-align: center;
+            min-width: 1.5em;
+            font-size: 1.1rem;
+        }
+        .challenge-row input,
+        .challenge-row button {
+            width: 100%;
+            margin: 0.25em 0 0 0;
+            font-size: 1rem;
+            flex-basis: 100%;
+            display: block;
+        }
+        .challenge-row input {
+            margin-top: 0.5em;
+        }
+    .score {
+        width: 100%;
+        margin-top: 0.5em;
+        display: block;
+        text-align: center;
+        padding: 10px 0 0 0;
+        position: static;
+        order: 2;
+    }
+}
+@media (max-width: 530px) {
+    .deskpad {
+        width: 98%;
+        height: 60vh;
+        max-width: 100%;
+        max-height: none;
+        min-height: 320px;
+        padding: 2%;
+    }
+}
+@media (max-width: 530px) {
+        .options {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            gap: 10px;
+        }
+            .options > button, .options > i {
+                width: 100%;
+                margin: 0;
+                font-size: 1rem;
+                display: block;
+            }
+            .options > button {
+                text-align: left;
+                height: 40px;
+                font-size: 1rem;
+                padding: 6px 8px;
+            }
+            .options > i {
+                text-align: right;
+                margin-top: -30px;
+                margin-bottom: 8px;
+                font-size: 1.2rem;
+                display: block;
+            }
+            .options > button, .options > i {
+                margin-bottom: 0;
+            }
+}
 body {
-  background-color: lightpink;
-  font-family: "Bricolage", cursive;
-  font-weight: 400;
-  font-style: normal;
+    background-color: lightpink;
+    font-family: "Bricolage", cursive;
+    font-weight: 300;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
 }
 
 .challenge-row {
@@ -10,3 +86,93 @@ body {
   align-items: center;
   gap: 0.5em;
 }
+
+img[alt^="heart logo"] {
+    height: 48px;
+    width: auto;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin: 24px 0 16px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+.deskpad {
+    background-color: #7f8557;
+    box-sizing: border-box;
+    width: 85%;
+    height: 40vh;
+    max-height: 200px;
+    max-width:450px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+}
+
+.challenge-row {
+ 
+    font-size: 1.8rem;
+    margin: auto;
+    padding: 25px 0;
+}
+
+
+#incorrect {
+    color: red;
+    font-weight: bold;
+}
+
+.answer-message {
+    display: none;
+    font-size: 1rem;
+}
+
+
+
+.score {
+    display: inline-block;
+    padding: 25px;
+}
+
+/* --------- Buttons */
+
+.options>button {
+    width: 180px;
+    height: 60px;
+    font-family: "Bricolage";
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    color: rgb(1, 48, 47);
+    content:attr(id);
+    background-color: white;
+    border: 2px solid rgb(135, 26, 26);
+    transition: all 0.3s;
+}
+
+.options>button:hover {
+    background-color: #445361;
+    color: white;
+    cursor: pointer;
+}
+
+.options>shape {
+    padding-top: 10px;
+    border-radius: 50%;
+    background-color: white;
+    border: 10px solid;
+    width: 100px;
+    height: 100px;
+    font-size: 3.2rem;
+    margin: 0 30px;
+    transition: all 0.5s;
+}
+
+
