--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -125,6 +125,12 @@ h1 {
     transition: all 0.5s;
 }
 
+.footer {
+    text-align: center;
+    font-size: 0.8rem;
+    margin-top: 50px;
+    padding: 10px 0;
+}
 @media (max-width: 530px) {
     .options {
         display: flex;
